--- a/drfsite/blog/templates/blog/index.html
+++ b/drfsite/blog/templates/blog/index.html
@@ -18,7 +18,27 @@
 <hr>
 <row>
     <div>
-        alskdjfaslkj
+        <div class="row">
+        <div class="col">
+            <h2>{{p.title}}</h2>
+            <p>{{p.content|linebreaks|truncatewords:50}}</p>
+        </div>
+        <div class="col">
+        {% if p.photo %}
+            <img src="{{p.photo.url}}" class="img-fluid float-end" width="165" height="244">
+        </div>
+        {% endif %}
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <a class="btn btn-secondary" href="{{ p.get_absolute_url }}">Читать пост</a>
+        </div>
+        <div class="col">
+             <p>Категория: {{p.cat}}</p>
+             <p>Дата: {{p.time_update|date:"d-m-Y H:i:s"}}</p>
+        </div>
+    </div>
     </div>
 </row>
 <hr>
