--- a/drfsite/blog/templates/blog/base.html
+++ b/drfsite/blog/templates/blog/base.html
@@ -15,7 +15,6 @@
   <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
 
-
     <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,7 +33,7 @@
                 <a href="{% url 'index' %}" class="nav-link">Главная</a>
             </li>
             <li class="nav-item ">
-                <a href="#" class="nav-link">Контакты</a>
+                <a href="{% url 'about' %}" class="nav-link">О сайте</a>
             </li>
         </ul>
         </div>
@@ -123,7 +122,61 @@
       </div>
     </td>
     <!--END SIDEBAR-->
+    <!--CONTENT-->
     <td>
+
+    <div class="container-fluid mt-5" style="background-color: antiquewhite">
+    <div class="container p-5">
+      <div class="card" style="width: 40rem">
+        <h4 class="card-title">Заголовок</h4>
+        <img src="{% static 'blog/images/rfv.jpg' %}" alt="" class="card-img-top">
+        <div class="card-body">
+          <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, nesciunt, recusandae. A corporis dolore doloremque eos error esse est expedita, id labore perspiciatis, quaerat quia quibusdam repudiandae, tenetur vero voluptas.</div>
+          <a href="" class="btn btn-primary">Читать</a>
+        </div>
+      </div>
+    </div>
+
+
+
+    <div class="container p-5">
+      <div class="card" style="width: 40rem">
+        <div class="container p-2">
+        <div class="row"><h4 class="card-title">Заголовок</h4></div>
+        <div class="row">
+        <div class="col-4"><img src="{% static 'blog/images/123.jpg' %}" alt="" class="card-img-top"></div>
+          <div class="col-8">
+        <div class="card-body">
+          <div class="card-text"><b>Описание: </b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, nesciunt, recusandae. A corporis dolore doloremque eos error esse est expedita, id labore perspiciatis, quaerat quia quibusdam repudiandae, tenetur vero voluptas.</div>
+        </div>
+            </div>
+        </div>
+        </div>
+
+        <div class="container p-2">
+        <div class="row">
+          <div class="col-3">
+            <a href="" class="btn btn-primary">Читать</a>
+          </div>
+          <div class="col-3">
+            <small>Автор: <a href="#">DDD</a></small>
+          </div>
+          <div class="col-6">
+            <small>Дата добавления: 01.01.8001</small>
+          </div>
+        </div>
+      </div>
+
+      <div class="container p-2">
+        <small><b>Теги:</b> драма мистика музыкальный сэйнэн</small>
+      </div>
+
+      </div>
+    </div>
+  </div>
+
+
+      <div class="container">
     <div class="col offset-1">
       <div class="container-fluid">
         {% block content %}
@@ -131,7 +184,9 @@
       </div>
     </div>
     <div class="col-1"></div>
+        </div>
     </td>
+    <!--END CONTENT-->
   </tr>
   </table>
 
