--- a/drfsite/blog/templates/blog/index.html
+++ b/drfsite/blog/templates/blog/index.html
@@ -23,6 +23,7 @@
     <div class="row">
       <div class="col">
         <a class="btn btn-secondary" href="{{ p.get_absolute_url }}">Читать пост</a>
+        <p>{{ p.user }}</p>
       </div>
       <div class="col">
         <p>Категория: {{p.cat}}</p>
