--- a/drfsite/blog/templates/blog/index.html
+++ b/drfsite/blog/templates/blog/index.html
@@ -1,6 +1,41 @@
 {% extends 'blog/base.html' %}
-
+{% load static %}
 {% block content %}
+<div class="container p-5">
+      <div class="card" style="width: 40rem">
+        <div class="container p-2">
+        <div class="row"><h4 class="card-title">Заголовок</h4></div>
+        <div class="row">
+        <div class="col-4"><img src="{% static 'blog/images/123.jpg' %}" alt="" class="card-img-top"></div>
+          <div class="col-8">
+            <div class="card-body">
+            <div class="card-text"><b>Описание: </b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, nesciunt, recusandae. A corporis dolore doloremque eos error esse est expedita, id labore perspiciatis, quaerat quia quibusdam repudiandae, tenetur vero voluptas.</div>
+            </div>
+          </div>
+        </div>
+        </div>
+        <div class="container p-2">
+        <div class="row">
+          <div class="col-3">
+            <a href="" class="btn btn-primary">Читать</a>
+          </div>
+          <div class="col-3">
+            <small>Автор: <a href="#">DDD</a></small>
+          </div>
+          <div class="col-6">
+            <small>Дата добавления: 01.01.8001</small>
+          </div>
+        </div>
+      </div>
+
+      <div class="container p-2">
+        <small><b>Теги:</b> драма мистика музыкальный сэйнэн</small>
+      </div>
+
+      </div>
+    </div>
+
+
 <div align="center"><h1>{{ title }}</h1></div>
 <div class="container-fluid">
 
