--- a/drfsite/blog/templates/blog/base.html
+++ b/drfsite/blog/templates/blog/base.html
@@ -78,7 +78,7 @@
           <li class="nav-item">
             <a href="#" class="nav-link active" aria-current="page">
               <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
-              Home
+              HomeUP
             </a>
           </li>
           <li>
@@ -107,19 +107,28 @@
           </li>
         </ul>
         <hr>
+
+        {% if request.user.is_authenticated %}
         <div class="dropdown">
           <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
             <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-            <strong>mdo</strong>
+            <strong>{{ user.username }}</strong>
           </a>
           <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
-            <li><a class="dropdown-item" href="#">New project...</a></li>
+            <li><a class="dropdown-item" href="{% url 'addpage' %}">New project...</a></li>
             <li><a class="dropdown-item" href="#">Settings</a></li>
             <li><a class="dropdown-item" href="#">Profile</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Sign out</a></li>
           </ul>
         </div>
+        {% else %}
+        <div><a href="{% url 'login' %}" class="nav-link text-white">
+          <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+          Войти
+        </a></div>
+        {% endif %}
+
         <div class="nav nav-pills flex-column mb-auto"></div>
       </div>
       </div>
@@ -143,7 +152,18 @@
 
 
   <!--FOOTER-->
-
+<div class="container-flex">
+  <footer class="py-3 my-1">
+    <ul class="nav nav-dark bg-dark justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-light">Home</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-light">Features</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-light">Pricing</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-light">FAQs</a></li>
+      <li class="nav-item"><a href="#" class="nav-link px-2 text-light">About</a></li>
+    </ul>
+    <p class="text-center text-light bg-dark">&copy; 2022 Company, Inc</p>
+  </footer>
+</div>
   <!--END FOOTER-->
   </body>
 </html>
