--- a/drfsite/blog/templates/blog/base.html
+++ b/drfsite/blog/templates/blog/base.html
@@ -105,6 +105,25 @@
               Customers
             </a>
           </li>
+
+           {% if cat_selected == 0 %}
+                   <li class="selected">Все категории</li>
+                {% else %}
+                   <li><a href="{% url 'index' %}" class="bd-links-link d-inline-block rounded">Все категории</a></li>
+                {% endif %}
+                    <p></p>
+
+                {% for c in cats %}
+                  {% if c.blog__count > 0 %}
+                      {% if c.pk == cat_selected %}
+                        <li class="bd-links-link d-inline-block rounded">{{c.name}}</li>
+                      {% else %}
+                        <li><a href="{{ c.get_absolute_url }}" class="bd-links-link d-inline-block rounded">{{c.name}}</a></li>
+                      {% endif %}
+                  {% endif %}
+                    <p></p>
+                {% endfor %}
+
         </ul>
         <hr>
 
