--- a/drfsite/blog/templates/blog/post.html
+++ b/drfsite/blog/templates/blog/post.html
@@ -4,7 +4,7 @@
 <h1>{{page.title}}</h1>
 <div class="container px-4 text-justify">
 {% if post.photo %}
-<p><img class="img-fluid float-start" width="320" height="320" src="{{page.photo.url}}"></p>
+<p><img class="img-fluid float-start" width="320" height="320" src="{{ post.photo.url }}"></p>
 {% endif %}
 
 {{post.content|linebreaks}}
