--- a/drfsite/blog/templates/blog/register.html
+++ b/drfsite/blog/templates/blog/register.html
@@ -1,12 +1,35 @@
 {% extends 'blog/base.html' %}
- 
+
 {% block content %}
-<h1>{{title}}</h1>
- 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Регистрация</button>
-</form>
- 
+    <div class="text-center">
+        {% if form.errors %}
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <div class="alert alert-danger">
+                    <strong>{{ error|escape }}</strong>
+                </div>
+            {% endfor %}
+        {% endif %}
+        <div class="col-md-4 mb-3 mx-auto">
+        <form class="form-signin" method="post" action="{% url 'register' %}">
+            {% csrf_token %}
+            <h1 class="h3 mb-3 mt-3 font-weight-normal">Для регистрации укажите имя пользователя и пароль</h1>
+            <label for="inputUsername" class="sr-only">Имя пользователя</label>
+            {{ form.username }}
+            <label for="inputEmail" class="sr-only">Email</label>
+            {{ form.email }}
+            <label for="inputPassword" class="sr-only">Пароль</label>
+            {{ form.password1 }}
+            <label for="ReInputPassword" class="sr-only">Повторите пароль</label>
+            {{ form.password2 }}
+            <button class="btn mt-2 btn-lg btn-primary btn-block" type="submit">Регистрация</button>
+        </form>
+       </div>
+    </div>
 {% endblock %}
