--- a/drfsite/blog/templates/blog/base.html
+++ b/drfsite/blog/templates/blog/base.html
@@ -46,9 +46,10 @@
             <button class="btn btn-outline-success" type="submit">Поиск</button>
           </form>
         </div>
-        <div class="col-1"></div>
-        <div class="col-auto">
-          <div class="mx-auto">
+        <div class="mx-auto">
+          <div class="col-1"></div>
+          <div class="col-auto">
+            <div class="d-grid gap-2 d-md-flex justify-content-md-end">
             {% if request.user.is_authenticated %}
             <a href="{% url 'logout' %}" class="btn btn-outline-light">Выход</a>
             {% else %}
@@ -56,6 +57,7 @@
             <a href="{% url 'register' %}" class="btn btn-outline-light mr-2">Регистрация</a>
             {% endif %}
             </div>
+          </div>
         </div>
     </div>
   </nav>
@@ -156,7 +158,7 @@
           <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
             <li><a class="dropdown-item" href="{% url 'addpage' %}">New project...</a></li>
             <li><a class="dropdown-item" href="#">Settings</a></li>
-            <li><a class="dropdown-item" href="#">Profile</a></li>
+            <li><a class="dropdown-item" href="{% url 'user_profile' pk=user.id %}">Profile</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Sign out</a></li>
           </ul>
