--- a/drfsite/blog/templates/blog/user_profile.html
+++ b/drfsite/blog/templates/blog/user_profile.html
@@ -2,34 +2,91 @@
 {% load static %}
 {% block content %}
 
+{% if page_user.id == user.id %}
+  <h4>Привет, {{ user.username }}</h4>
+{% endif %}
+
 <div class="container p-5">
-<div class="header-bar">
-  <h1>Profile</h1>
-    <a href="{% url 'index' %}">Back</a>
+  <div class="card" style="width:50rem">
+    <div class="container p-2">
+      <div class="row">
+        <h4 class="card-title">{{ page_user }}</h4>
+      </div>
+      <div class="row">
+        <div class="col-4">
+            {% if user.profile.profile_pic %}
+             <img src="{{ profile.profile_pic.url }}" height=100 width=100 class="card-img-top">
+            {% else %}
+             <img src="{% static 'blog/images/cat.svg' %}" height=100 width=100 class="card-img-top">
+            {% endif %}
+        </div>
+        <div class="col-8">
+
+
+  <div class="row">
+    <div class="card-body">
+
+
+    <p><strong>Username:</strong>{{ page_user }}</p><br><br>
+    <p><strong>О себе:</strong> {{ profile.bio }}</p><br><br>
+    <p><strong>Зарегистрирован с </strong>{{ page_user.date_joined }}</p>
+
+
+    </div>
+  </div>
+  </div>
+      </div>
+    </div>
+  </div>
 </div>
 
-<div class="card-body">
-{% if user.profile.profile_pic %}
- <img src="{{ profile.profile_pic.url }}" height=100 width=100><br><br>
-{% else %}
- <img src="{% static 'blog/images/cat.svg' %}" height=100 width=100><br><br>
-{% endif %}
+<div class="container p-5">
 
-<p><strong>Username:</strong> {{ page_user }}</p><br><br>
-<p><strong>О себе:</strong> {{ profile.bio }}</p><br><br>
-<p><strong>Зарегистрирован с </strong>{{ page_user.date_joined }}</p>
+{% if posts %}
 
-
-{% if page_user.id == user.id %}
-    <p>Привет</p>
-
-{% endif %}
-
+<div class="row">
+    <h4 class="card-title">Посты пользователя {{ page_user }}</h4>
+</div>
 {% for p in posts %}
-    <a href="{{ p.get_absolute_url }}">{{ p.title }} </a>
+<div class="container p-5">
+  <div class="card" style="width:50rem">
+    <div class="container p-2">
+      <div class="row">
+        <h4 class="card-title">{{ p.title }}</h4>
+      </div>
+      <div class="row">
+        <div class="col-4"><img src="{{ p.photo.url }}" alt="" class="card-img-top"></div>
+        <div class="col-8">
+          <div class="card-body">
+            <div class="card-text">{{p.content|linebreaks|truncatewords:50}}</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container p-2">
+      <div class="row">
+        <div class="col-3">
+          <a href="{{ p.get_absolute_url }}" class="btn btn-primary">Читать</a>
+        </div>
+        <div class="col-3">
+          <small>Автор: <a href="{% url 'user_profile' pk=p.user_id %}">{{ p.user }}</a></small>
+        </div>
+        <div class="col-6">
+          <small>Дата: {{p.time_update|date:"d-m-Y H:i:s"}}</small>
+        </div>
+      </div>
+    </div>
+    <div class="container p-2">
+      <small><b>Теги:</b> {{ p.cat }}</small>
+    </div>
+  </div>
+</div>
 {% endfor %}
 
+{% else %}
+    <div>Постов пока нет</div>
+{% endif %}
 
 </div>
-</div>
+
 {% endblock content %}
