--- a/drfsite/blog/templates/blog/base.html
+++ b/drfsite/blog/templates/blog/base.html
@@ -53,13 +53,19 @@
             {% if request.user.is_authenticated %}
               <div class="dropdown">
                 <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                  <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+
+                  {% if user.avatar %}
+                   <img src="{{ user.avatar.url }}" height=32 width=32 class="rounded-circle me-2">
+                  {% else %}
+                   <img src="{% static 'blog/images/cat.svg' %}" height=32 width=32 class="rounded-circle me-2">
+                  {% endif %}
                   <strong>{{ user.username }}</strong>
                 </a>
+
                 <ul class="dropdown-menu dropdown-menu-dark text-small shadow" aria-labelledby="dropdownUser1">
                   <li><a class="dropdown-item" href="{% url 'addpage' %}">Создать пост</a></li>
                   <li><a class="dropdown-item" href="#">Settings</a></li>
-                  <li><a class="dropdown-item" href="{% url 'user_profile' pk=user.id %}">Профиль</a></li>
+                  <li><a class="dropdown-item" href="{% url 'user_profile' slug=user.slug %}">Профиль</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="{% url 'logout' %}">Выход</a></li>
                 </ul>
@@ -123,45 +129,47 @@
 
           <hr>
            {% if cat_selected == 0 %}
-               <li class="nav-item">
-                 <a href="#" class="nav-link active" aria-current="page">
+             <li class="nav-item">
+               <a href="#" class="nav-link active" aria-current="page">
                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
-                   Все категории
-                 </a>
-               </li>
-                {% else %}
-               <li class="nav-item">
-                 <a href="{% url 'index' %}" class="nav-link text-white" aria-current="page">
+                 Все категории
+               </a>
+             </li>
+           {% else %}
+             <li class="nav-item">
+               <a href="{% url 'index' %}" class="nav-link text-white" aria-current="page">
                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
-                   Все категории
-                 </a>
-               </li>
-                {% endif %}
-                    <p></p>
+                 Все категории
+               </a>
+             </li>
+           {% endif %}
+           <p></p>
 
-                {% for c in cats %}
-                  {% if c.blog__count > 0 %}
-                      {% if c.pk == cat_selected %}
-                        <li class="nav-item">
-                          <a href="#" class="nav-link active" aria-current="page">
-                            <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
-                            {{c.name}}
-                          </a>
-                        </li>
-                      {% else %}
-                        <li class="nav-item">
-                          <a href="{{ c.get_absolute_url }}" class="nav-link text-white" aria-current="page">
-                            <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
-                            {{c.name}}
-                          </a>
-                         </li>
-                      {% endif %}
-                  {% endif %}
-                    <p></p>
-                {% endfor %}
+           {% for c in cats %}
+             {% if c.blog__count > 0 %}
+               {% if c.pk == cat_selected %}
+                 <li class="nav-item">
+                   <a href="#" class="nav-link active" aria-current="page">
+                     <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+                     {{c.name}}
+                   </a>
+                 </li>
+               {% else %}
+                 <li class="nav-item">
+                   <a href="{{ c.get_absolute_url }}" class="nav-link text-white" aria-current="page">
+                     <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+                     {{c.name}}
+                   </a>
+                 </li>
+               {% endif %}
+             {% endif %}
+             <p></p>
+           {% endfor %}
         </ul>
         <hr>
 
+
+          <a href="{% url 'latest_articles_feed' %}">Подписаться на RSS ленту</a>
 
 
       </div>
@@ -195,7 +203,7 @@
       <li class="nav-item"><a href="#" class="nav-link px-2 text-light">FAQs</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-light">About</a></li>
     </ul>
-    <p class="text-center text-light bg-dark">&copy; 2022 Company, Inc</p>
+    <p class="text-center text-light bg-dark">&copy; 2023 Company, Inc</p>
   </footer>
 </div>
   <!--END FOOTER-->
